--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.0
   flutter_bloc: ^6.1.3
+  rive: ^0.6.8
 
 dev_dependencies:
   flutter_test:
